Fix overflow on focus state (#374)

--- a/packages/app-icon-explorer/src/components/IconsListing/components/SingleIcon.module.scss
+++ b/packages/app-icon-explorer/src/components/IconsListing/components/SingleIcon.module.scss
@@ -9,6 +9,7 @@
   color: $color-ink-lighter;
   text-decoration: none;
   -webkit-tap-highlight-color: transparent;
+  overflow: hidden;
 }
 
 .active {
